5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4083/executions/1602_1017.log
== TEST (2019-03-24 21:52:18) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))
from math import*
d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:52:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))
from math import*
d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    t1 = radians(float(input()))
NameError: name 'radians' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:53:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 21:53:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- EXECUTION TIME:
0.126698
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:54:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:55:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 21:58:13) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- EXECUTION TIME:
0.195022
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 21:59:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*arccos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arccos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:00:38) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- EXECUTION TIME:
0.140676
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1602/1017/main.py", line 11, in <module>
    d = R*arcos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arcos' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:01:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    d = R*arcos(sen(t1)*sen(t2)+cos(t1)*cos(t2)*cos(g1-g2))
NameError: name 'arcos' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:04:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))
print(round(d, 2))




-- EXECUTION TIME:
0.142912
-- ERROR:
  File "/home/codebench/codes/1602/1017/main.py", line 12
    print(round(d, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:04:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))
print(round(d, 2))




-- ERROR:
File "XXXX", line 12
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:05:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))
print(round(d, 2))




-- ERROR:
File "XXXX", line 12
    print(round(d, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:06:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))
print(round(d, 2)):




-- ERROR:
File "XXXX", line 12
    print(round(d, 2)):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:06:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))

d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))
print(t1)




-- ERROR:
File "XXXX", line 12
    print(t1)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:06:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))
d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))





-- ERROR:
File "XXXX", line 15
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:06:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))
d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))

-- ERROR:
File "XXXX", line 11
    
                                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:06:55) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("Latitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Latitude de g2: ")))
d = R*arcos((sen(t1)*sen(t2))+(cos(t1)*cos(t2))*(cos(g1-g2))
-- ERROR:
File "XXXX", line 11
    
                                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:08:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de g2: ")))

-- ERROR:
File "XXXX", line 11
    
                                                                ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-24 22:13:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de g2: ")))
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- OUTPUT:
50.44
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-24 22:13:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
R = 6371.01
t1 = radians(float(input("Latitude de P1: ")))
g1 = radians(float(input("longitude de g1: ")))
t2 = radians(float(input("Latitude de P2: ")))
g2 = radians(float(input("Longitude de g2: ")))
d = R*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(d, 2))




-- EXECUTION TIME:
0.247909
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
